<resources>
    <string name="app_name">Nine11 Flights</string>
    <string name="activity_origin">Select where you start</string>
    <string name="activity_destination">Select your destination</string>
    <string name="activity_flights">Results</string>

    <string name="departure_dp">Select departure date</string>
    <string name="return_dp">Select return date</string>

    <string name="title_activity_search_flights">SearchFlightsActivity</string>
    <string name="origin_button">Select your location</string>
    <string name="destination_button">Select your destination</string>
    <string name="your_location">Your location:</string>
    <string name="your_destination">Your destination:</string>
    <string name="your_seat">Select seat type:</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="infants">Infants</string>
    <string name="children">Children</string>
    <string name="adults">Adults</string>

    <string name="search_button">Search</string>


    <string-array name="seats_array">
        <item>Economy</item>
        <item>Premium economy</item>
        <item>Business class</item>
        <item>First class</item>
    </string-array>

</resources>
