<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_flights"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#0D47A1"
    tools:context="mobile.uom.gr.androidproject.SearchFlightsActivity">

    <Button
        android:id="@+id/set_origin"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/origin_button"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="#009688"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/your_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:id="@+id/origin_text"
            android:layout_gravity="end"
            android:layout_marginBottom="5dp"
            />
    </LinearLayout>


    <Button
        android:id="@+id/set_destination"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destination_button"
        android:textAllCaps="false"
        android:background="#009688"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/your_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:id="@+id/destination_text"
            android:layout_gravity="end"
            android:layout_marginBottom="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/your_seat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            />
        <Spinner
            android:id="@+id/seats_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:textAlignment="center"
            />
    </LinearLayout>




</LinearLayout>
